@@ -3,7 +3,9 @@
  * Enabling inserting label on pushing return after typing in label name.
  * Enabling inserting \usepackage{} on pushing return after typing in dialog.
  * Enabling inserting environment on pushing return after typing inside
-   the insert environment dialog. 
+   the insert environment dialog.
+ * Enabling inserting reference on pushing return after typing inside the
+   insert reference dialog.
 
 
 2010-03-27  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
